--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
                 <h1>Cordel Moderno</h1>
         <nav>
-            <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]">Milton Duarte</a></p>
+            <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
     </nav>
 </header>       
 <main>
